commit translated contents

--- a/docs/docs-ref-autogen/office/office.projecttaskfields.yml
+++ b/docs/docs-ref-autogen/office/office.projecttaskfields.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2943565da6a763918209c507f8f1b47b351e60d2
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: ebc41b237b8b0d46f01b60dd3c9409bd20e05091
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298433"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539511"
 items:
 - uid: office.Office.ProjectTaskFields
   summary: 指定可用作[文档](xref:office.Office.Document)的参数的任务字段<!-- -->.getTaskFieldAsync 方法。
@@ -12,10 +12,10 @@ items:
     ProjectTaskFields 常数可用作[文档](xref:office.Office.Document)的参数<!-- -->.getTaskFieldAsync 方法。
 
 
-    有关使用项目中的域的详细信息，请参阅[可用字段](https://support.office.com/article/Available-fields-reference-615a4563-1cc3-40f4-b66f-1b17e793a460)参考。 在 Project 帮助，搜索可用字段。
+    若要详细了解如何处理 Project 中的域，请参阅可用域引用。在 Project 的“帮助”中，搜索 Available fields。
 
 
-    **支持详细信息**
+    支持详细信息
 
 
     下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此枚举。空的单元格表示相应的 Office 主机应用程序不支持此枚举。
@@ -74,6 +74,7 @@ items:
   - office.Office.ProjectTaskFields.Baseline3Finish
   - office.Office.ProjectTaskFields.Baseline3FixedCost
   - office.Office.ProjectTaskFields.Baseline3FixedCostAccrual
+  - office.Office.ProjectTaskFields.Baseline3Start
   - office.Office.ProjectTaskFields.Baseline3Work
   - office.Office.ProjectTaskFields.Baseline4BudgetCost
   - office.Office.ProjectTaskFields.Baseline4BudgetWork
@@ -138,7 +139,6 @@ items:
   - office.Office.ProjectTaskFields.BaselineFixedCostAccrual
   - office.Office.ProjectTaskFields.BaselineStart
   - office.Office.ProjectTaskFields.BaselineWork
-  - office.Office.ProjectTaskFields.Basline3Start
   - office.Office.ProjectTaskFields.BudgetCost
   - office.Office.ProjectTaskFields.BudgetFixedCost
   - office.Office.ProjectTaskFields.BudgetFixedWork
@@ -609,6 +609,13 @@ items:
   langs:
   - typeScript
   type: field
+- uid: office.Office.ProjectTaskFields.Baseline3Start
+  summary: 基准任务的开始日期。
+  name: Baseline3Start
+  fullName: Baseline3Start
+  langs:
+  - typeScript
+  type: field
 - uid: office.Office.ProjectTaskFields.Baseline3Work
   summary: 计划给基准任务的人员-小时总数，以分钟为单位。
   name: Baseline3Work
@@ -1054,13 +1061,6 @@ items:
   summary: 计划给基准任务的人员-小时总数，以分钟为单位。
   name: BaselineWork
   fullName: BaselineWork
-  langs:
-  - typeScript
-  type: field
-- uid: office.Office.ProjectTaskFields.Basline3Start
-  summary: 基准任务的开始日期。
-  name: Basline3Start
-  fullName: Basline3Start
   langs:
   - typeScript
   type: field
