--- a/docs/docs-ref-autogen/outlook/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 67a0599145631649a11ff071f319cc287921afe7
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: d2f486e7ecd248b99b360b3091a259acb2136c2b
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26297579"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539217"
 items:
 - uid: outlook.Office.LocalClientTime
   summary: >-
@@ -16,7 +16,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.LocalClientTime
   fullName: Office.LocalClientTime
   langs:
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: outlook.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
