--- a/docs/docs-ref-autogen/outlook_1_1/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8ed4fc90fe10911b60b6855ba8ebd5863d90e3e0
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: 7a229efdcbb200f74caff0e2eee4c0043d138735
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29384970"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539546"
 items:
 - uid: Outlook_1_1.Office.AppointmentCompose
   summary: >-
@@ -25,7 +25,7 @@ items:
   - Outlook_1_1.Office.AppointmentCompose.addItemAttachmentAsync
   - Outlook_1_1.Office.AppointmentCompose.body
   - Outlook_1_1.Office.AppointmentCompose.dateTimeCreated
-  - Outlook_1_1.Office.AppointmentCompose.dateTimeModifed
+  - Outlook_1_1.Office.AppointmentCompose.dateTimeModified
   - Outlook_1_1.Office.AppointmentCompose.end
   - Outlook_1_1.Office.AppointmentCompose.itemType
   - Outlook_1_1.Office.AppointmentCompose.loadCustomPropertiesAsync
@@ -200,7 +200,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_1.Office.AppointmentCompose.dateTimeModifed
+- uid: Outlook_1_1.Office.AppointmentCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -214,13 +214,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
