--- a/docs/docs-ref-autogen/outlook_1_2/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 67444f0aab60011ff173cb14a2585c4a6bee5182
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: f3d6434949bb33644c0f5123a9fe9bc623d9c799
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29385173"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539490"
 items:
 - uid: Outlook_1_2.Office.AppointmentCompose
   summary: >-
@@ -25,7 +25,7 @@ items:
   - Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync
   - Outlook_1_2.Office.AppointmentCompose.body
   - Outlook_1_2.Office.AppointmentCompose.dateTimeCreated
-  - Outlook_1_2.Office.AppointmentCompose.dateTimeModifed
+  - Outlook_1_2.Office.AppointmentCompose.dateTimeModified
   - Outlook_1_2.Office.AppointmentCompose.end
   - Outlook_1_2.Office.AppointmentCompose.getSelectedDataAsync
   - Outlook_1_2.Office.AppointmentCompose.itemType
@@ -202,7 +202,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_2.Office.AppointmentCompose.dateTimeModifed
+- uid: Outlook_1_2.Office.AppointmentCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -216,13 +216,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
