--- a/docs/docs-ref-autogen/outlook_1_2/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.messagecompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ffbe22bbfec41098e0ab465101972366d2bc908a
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: 688f020a70d824ecb9b234f7d548d1f6d5a6c06a
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29385152"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539534"
 items:
 - uid: Outlook_1_2.Office.MessageCompose
   summary: >-
@@ -28,7 +28,7 @@ items:
   - Outlook_1_2.Office.MessageCompose.cc
   - Outlook_1_2.Office.MessageCompose.conversationId
   - Outlook_1_2.Office.MessageCompose.dateTimeCreated
-  - Outlook_1_2.Office.MessageCompose.dateTimeModifed
+  - Outlook_1_2.Office.MessageCompose.dateTimeModified
   - Outlook_1_2.Office.MessageCompose.getSelectedDataAsync
   - Outlook_1_2.Office.MessageCompose.itemType
   - Outlook_1_2.Office.MessageCompose.loadCustomPropertiesAsync
@@ -273,7 +273,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_2.Office.MessageCompose.dateTimeModifed
+- uid: Outlook_1_2.Office.MessageCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -287,13 +287,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
