--- a/docs/docs-ref-autogen/outlook_1_4/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: da1f05f10b653e0a213795a8535aa4f2b67b8fba
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 4f8a67c23468e0c315248227fac7706dc2d27ba7
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26648489"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539721"
 items:
 - uid: Outlook_1_4.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_4.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
