--- a/docs/docs-ref-autogen/outlook_1_5/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1d8800d8ee52548730b6a90f8e9f6e6f83f05d36
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: d006552241de2022e60b71137df3b4ae674a3b58
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29385110"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539553"
 items:
 - uid: Outlook_1_5.Office.AppointmentCompose
   summary: >-
@@ -26,7 +26,7 @@ items:
   - Outlook_1_5.Office.AppointmentCompose.body
   - Outlook_1_5.Office.AppointmentCompose.close
   - Outlook_1_5.Office.AppointmentCompose.dateTimeCreated
-  - Outlook_1_5.Office.AppointmentCompose.dateTimeModifed
+  - Outlook_1_5.Office.AppointmentCompose.dateTimeModified
   - Outlook_1_5.Office.AppointmentCompose.end
   - Outlook_1_5.Office.AppointmentCompose.getSelectedDataAsync
   - Outlook_1_5.Office.AppointmentCompose.itemType
@@ -186,7 +186,7 @@ items:
       - outlook.Office.Body
 - uid: Outlook_1_5.Office.AppointmentCompose.close
   summary: >-
-    关闭当前项目的所构成
+    关闭当前正在撰写的项目。
 
 
     Close 方法的行为取决于所构成的项目的当前状态。 如果该项目包含未保存更改，客户端将提示用户保存、 放弃，或关闭操作。
@@ -236,7 +236,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_5.Office.AppointmentCompose.dateTimeModifed
+- uid: Outlook_1_5.Office.AppointmentCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -250,13 +250,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
