--- a/docs/docs-ref-autogen/outlook_1_6/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.messagecompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5db9a0ce606bc74dea660e773d11f19c80c42f04
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: 739233639c4683f27667dc87087ce07eb9097b9b
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29385208"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539735"
 items:
 - uid: Outlook_1_6.Office.MessageCompose
   summary: >-
@@ -29,7 +29,7 @@ items:
   - Outlook_1_6.Office.MessageCompose.close
   - Outlook_1_6.Office.MessageCompose.conversationId
   - Outlook_1_6.Office.MessageCompose.dateTimeCreated
-  - Outlook_1_6.Office.MessageCompose.dateTimeModifed
+  - Outlook_1_6.Office.MessageCompose.dateTimeModified
   - Outlook_1_6.Office.MessageCompose.getSelectedDataAsync
   - Outlook_1_6.Office.MessageCompose.itemType
   - Outlook_1_6.Office.MessageCompose.loadCustomPropertiesAsync
@@ -230,7 +230,7 @@ items:
       - Recipients
 - uid: Outlook_1_6.Office.MessageCompose.close
   summary: >-
-    关闭当前项目的所构成
+    关闭当前正在撰写的项目。
 
 
     Close 方法的行为取决于所构成的项目的当前状态。 如果该项目包含未保存更改，客户端将提示用户保存、 放弃，或关闭操作。
@@ -307,7 +307,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_6.Office.MessageCompose.dateTimeModifed
+- uid: Outlook_1_6.Office.MessageCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -321,13 +321,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
