--- a/docs/docs-ref-autogen/outlook_1_7/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5e18507d9f386e95a4a79079dc073cecf34fb7f2
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: 669ff7d27bed0b861647d8895e5e0c2275ef3133
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29385047"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539464"
 items:
 - uid: Outlook_1_7.Office.AppointmentCompose
   summary: >-
@@ -27,7 +27,7 @@ items:
   - Outlook_1_7.Office.AppointmentCompose.body
   - Outlook_1_7.Office.AppointmentCompose.close
   - Outlook_1_7.Office.AppointmentCompose.dateTimeCreated
-  - Outlook_1_7.Office.AppointmentCompose.dateTimeModifed
+  - Outlook_1_7.Office.AppointmentCompose.dateTimeModified
   - Outlook_1_7.Office.AppointmentCompose.end
   - Outlook_1_7.Office.AppointmentCompose.getSelectedDataAsync
   - Outlook_1_7.Office.AppointmentCompose.itemType
@@ -239,7 +239,7 @@ items:
       - outlook.Office.Body
 - uid: Outlook_1_7.Office.AppointmentCompose.close
   summary: >-
-    关闭当前项目的所构成
+    关闭当前正在撰写的项目。
 
 
     Close 方法的行为取决于所构成的项目的当前状态。 如果该项目包含未保存更改，客户端将提示用户保存、 放弃，或关闭操作。
@@ -289,7 +289,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_7.Office.AppointmentCompose.dateTimeModifed
+- uid: Outlook_1_7.Office.AppointmentCompose.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -303,13 +303,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
@@ -749,7 +749,7 @@ items:
     在 OWA 和 Outlook 中，可能指向返回此项目所属的父 （系列） 项的 Exchange Web Services (EWS) ID。 但是，在 iOS 和 Android，可能指向返回父项的 REST ID。
 
 
-    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
+    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[从 Outlook 加载项使用 Outlook REST API](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
 
 
     可能指向属性返回 null 没有父项目，如单个约会系列项目的项目或会议请求，并返回 undefined 不是会议请求的其他任何项。
