--- a/docs/docs-ref-autogen/outlook_1_7/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e805aadfa8371410ab385d69852ab1adbff60a69
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: 4e1c45fba5a476239e7f7409cf887cde6276faee
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29384977"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539763"
 items:
 - uid: Outlook_1_7.Office.Item
   summary: >-
@@ -27,7 +27,7 @@ items:
   - Outlook_1_7.Office.Item.addHandlerAsync
   - Outlook_1_7.Office.Item.body
   - Outlook_1_7.Office.Item.dateTimeCreated
-  - Outlook_1_7.Office.Item.dateTimeModifed
+  - Outlook_1_7.Office.Item.dateTimeModified
   - Outlook_1_7.Office.Item.itemType
   - Outlook_1_7.Office.Item.loadCustomPropertiesAsync
   - Outlook_1_7.Office.Item.notificationMessages
@@ -124,7 +124,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_7.Office.Item.dateTimeModifed
+- uid: Outlook_1_7.Office.Item.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -138,13 +138,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
@@ -312,7 +312,7 @@ items:
     在 OWA 和 Outlook 中，可能指向返回此项目所属的父 （系列） 项的 Exchange Web Services (EWS) ID。 但是，在 iOS 和 Android，可能指向返回父项的 REST ID。
 
 
-    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
+    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[从 Outlook 加载项使用 Outlook REST API](https://docs.microsoft.com/outlook/add-ins/use-rest-api)。
 
 
     可能指向属性返回 null 没有父项目，如单个约会系列项目的项目或会议请求，并返回 undefined 不是会议请求的其他任何项。
