--- a/docs/docs-ref-autogen/outlook_1_1/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 08bfa1c4bed09e4343af107704635b1566eeeccf
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 4dbc9d02ab7b22a5848f9c4740135ac09a917d5e
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26646200"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539616"
 items:
 - uid: Outlook_1_1.Office.Item
   summary: >-
@@ -26,7 +26,7 @@ items:
   children:
   - Outlook_1_1.Office.Item.body
   - Outlook_1_1.Office.Item.dateTimeCreated
-  - Outlook_1_1.Office.Item.dateTimeModifed
+  - Outlook_1_1.Office.Item.dateTimeModified
   - Outlook_1_1.Office.Item.itemType
   - Outlook_1_1.Office.Item.loadCustomPropertiesAsync
 - uid: Outlook_1_1.Office.Item.body
@@ -71,7 +71,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_1.Office.Item.dateTimeModifed
+- uid: Outlook_1_1.Office.Item.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -85,13 +85,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
