--- a/docs/docs-ref-autogen/outlook_1_2/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 83ea5b8f7757614b13cfcf4d2cb8917a31a2d482
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 00134a7092721c09ab0e5d5447ef2da40ed9e185
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26648734"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539588"
 items:
 - uid: Outlook_1_2.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
