--- a/docs/docs-ref-autogen/outlook_1_3/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d0dcd874223b9b216086e36e8c80458f539c8a04
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 9a53d79ca8e3bcb7ee57be8d41e9b078cd9c166c
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26645507"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539518"
 items:
 - uid: Outlook_1_3.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_3.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
