--- a/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 85bb89e59f26fa6e36aeb08a90341bc17704d632
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 81c7a9c23c7fb19fd91d7440f67752ffe826acdd
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26645416"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539826"
 items:
 - uid: Outlook_1_5.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
