--- a/docs/docs-ref-autogen/outlook_1_6/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3b9bb94ae97f3ebeabc593e8b921c2a729bd332a
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 49bd564006ae8c76914cc6ae56b956f73d7544b0
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26647621"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539602"
 items:
 - uid: Outlook_1_6.Office.Item
   summary: >-
@@ -26,7 +26,7 @@ items:
   children:
   - Outlook_1_6.Office.Item.body
   - Outlook_1_6.Office.Item.dateTimeCreated
-  - Outlook_1_6.Office.Item.dateTimeModifed
+  - Outlook_1_6.Office.Item.dateTimeModified
   - Outlook_1_6.Office.Item.itemType
   - Outlook_1_6.Office.Item.loadCustomPropertiesAsync
   - Outlook_1_6.Office.Item.notificationMessages
@@ -72,7 +72,7 @@ items:
     return:
       type:
       - Date
-- uid: Outlook_1_6.Office.Item.dateTimeModifed
+- uid: Outlook_1_6.Office.Item.dateTimeModified
   summary: >-
     获取项目最近一次修改的日期和时间。仅限阅读模式。
 
@@ -86,13 +86,13 @@ items:
 
 
     注意：在 Outlook for iOS 或 Outlook for Android 中不支持此成员。
-  name: dateTimeModifed
-  fullName: dateTimeModifed
+  name: dateTimeModified
+  fullName: dateTimeModified
   langs:
   - typeScript
   type: property
   syntax:
-    content: 'dateTimeModifed: Date;'
+    content: 'dateTimeModified: Date;'
     return:
       type:
       - Date
