--- a/docs/docs-ref-autogen/outlook_1_6/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c2132218ec4049cfe8cadf65695832f492bac337
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: e357b4b7a9489cb9543ce394f74bc02770e35413
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26649042"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539777"
 items:
 - uid: Outlook_1_6.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_6.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
