--- a/docs/docs-ref-autogen/outlook_1_7/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7690d6b3c2b2241423396a21882581c1a5fb8a72
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: a1a00bc2730cecb6db220b0eaab71fc33a69bddb
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26647145"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539714"
 items:
 - uid: Outlook_1_7.Office.LocalClientTime
   summary: >-
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_7.Office.LocalClientTime.year
-  summary: 表示年份的整数值。
+  summary: 表示年的整数值。
   name: year
   fullName: year
   langs:
